# qr-attendance-logger

./: README.md  pyrightconfig.json  setup.cfg
example/: terminal_qr_logger.py
src/qr_attendance_logger/: __init__.py  _version.py  qr_loggers.py
