[metadata]
name = qr-attendance-logger-nosterlu
version = attr: qr_attendance_logger._version.__version__
author = Niklas Österlund
author_email = no-name@gmail.com
description = QR logging, optional sending to Azure storage
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nosterlu/qr-attendance-logger
project_urls =
    Bug Tracker = https://github.com/nosterlu/qr-attendance-logger/issues
platforms = any
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    azure-storage-blob

[options.packages.find]
where = src
